--- a/jhj-web-user/html/order-yuesao.html
+++ b/jhj-web-user/html/order-yuesao.html
@@ -64,8 +64,47 @@
 										<div class="shendu-title-1"></div>
 										<p>服务介绍</p>
 									</div>
-									<img src="../img/muyindaojia/cuirushi-2.jpg" alt="" class="all-img8">
-									<p class="special-color1" id="muyin1">月嫂工作集保姆、护士、营养师、厨师、保育员、保洁员的工作性质于一身。月嫂工作专业性强，综合素质要求更高，专业培训且经验丰富才能胜任。</p>
+									<p class="special-color1">月嫂工作集保姆、护士、营养师、厨师、保育员、保洁员的工作性质于一身。月嫂工作专业性强，综合素质要求更高，专业培训且经验丰富才能胜任。</p>
+									<div class="chongzhi5-kong2"></div>
+								</div>
+
+								<div class="shendu-bx">
+									<div class="shendu-title" style="clear:both;margin-top:10px;">
+										<div class="shendu-title-1"></div>
+										<p>技能介绍</p>
+									</div>
+									<img src="../img/muyindaojia/yuesao-2.jpg" alt="" class="all-img8">
+									<p id="muyin5">
+										<!-- <h5>初级</h5> -->
+										<b class="special-color2" style="font-size:14px;">初级月嫂:</b>&nbsp;洗澡·抚触·被动操，冲奶·拍嗝，制作月子餐，黄疸观察，有月嫂证
+									</p>
+									<div class="chongzhi5-kong2"></div>
+									<p id="muyin2" style="margin-top:25px;">
+										<!-- <h5>初级</h5> -->
+										<b class="special-color2" style="font-size:14px;">中级月嫂:</b>&nbsp;初级加制作多种月子餐，观察恶露·黄疸，催乳，新生儿常见病护理，月嫂证、催乳师证、膳食营养师证、小二推拿证
+									</p>
+									<img src="../img/muyindaojia/yuesao-3.jpg" alt="" class="all-img9">
+									<div class="chongzhi5-kong2"></div>
+									<img src="../img/muyindaojia/yuesao-4.jpg" alt="" class="all-img8">
+									<p id="muyin5">
+										<!-- <h5>初级</h5> -->
+										<b class="special-color2" style="font-size:14px;">高级月嫂:</b>&nbsp;中级加各种月子餐，开奶催乳，心理疏导，应急处理，月嫂证、催乳师证、膳食营养师证、小二推拿证
+									</p>
+									<div class="chongzhi5-kong2"></div>
+									<p id="muyin2" style="margin-top:10px;">
+										<!-- <h5>初级</h5> -->
+										<b class="special-color2" style="font-size:14px;">金牌月嫂:</b>&nbsp;高级加各种技能都很娴熟，懂得产妇和新生儿特殊情况的处理，会月子汗蒸，乳房护理，月嫂证、催乳师证、膳食营养师证、小二推拿证，至少保证有两张技能证书以上
+									</p>
+									<img src="../img/muyindaojia/yuesao-5.jpg" alt="" class="all-img9">
+									<div class="chongzhi5-kong2"></div>
+								</div>
+								
+								<div class="shendu-bx">
+									<div class="shendu-title" style="clear:both;margin-top:10px;">
+										<div class="shendu-title-1"></div>
+										<p>月嫂的综合素质评估</p>
+									</div>
+									<p class="special-color1">包括普通话、形象、礼仪、文化程度、沟通能力、年龄等，综合考察，全优上岗</p>
 									<div class="chongzhi5-kong2"></div>
 								</div>
 
@@ -74,8 +113,8 @@
 										<div class="shendu-title-1"></div>
 										<p>服务优势</p>
 									</div>
-									<p id="muyin2">催乳师职业资格认定、熟练掌握丰富的营养、中医、护理等专业知识和技能</p>
-									<img src="../img/muyindaojia/cuirushi-3.jpg" alt="" class="all-img9">
+									<img src="../img/muyindaojia/yuesao-6.jpg" alt="" class="all-img8">
+									<p id="muyin3">专业月嫂团队，专业技能培训，专业服务母婴家庭，拥有上千优质月嫂，服务上万家庭。</p>
 									<div class="chongzhi5-kong2"></div>
 								</div>
 
@@ -84,7 +123,7 @@
 										<div class="shendu-title-1"></div>
 										<p>安全保障</p>
 									</div>
-									<p id="muyin2">自营催乳师，全员雇佣制，身份实名更可靠，用着更放心。</p>
+									<p id="muyin2">自营月嫂，全员雇佣制，身份实名更可靠，用着更放心</p>
 									<img src="../img/muyindaojia/muyin-1.jpg" alt="" class="all-img9">
 									<div class="chongzhi5-kong2"></div>
 								</div>
