--- a/jhj-web-user/order/order-anjubao-intro.html
+++ b/jhj-web-user/order/order-anjubao-intro.html
@@ -1,36 +1,65 @@
-<div class="pages navbar-through toolbar-through">
-    <div data-page="order-anjubao-intro" class="page">
-        <div id="indexPageContentDiv" class="page-content">
-            <div class="beijing-index">
-                <a href="order/order-deep-choose.html?service_type_id=65"><img src="img/anjubao/1.jpg" alt="" class="all-img"></a>
-                <div class="shendu-bx">
-						<a href="order/order-deep-choose.html?service_type_id=65"><div class="all-button">立即预约</div>
-						<div class="shendu-bx-xd">
-							<ul class="shendu-bx-xd1">
-								<li>类别</li>
-								<li>非会员价</li>
-								<li>会员价</li>
-							</ul>
-							<ul class="shendu-bx-xd11">
-								<li>设计方案</li>
-								<li>299元/次</li>
-								<li>220元/次</li>
-							</ul>
-							<ul class="shendu-bx-xd11">
-								<li>施工费</li>
-								<li>199元/次</li>
-								<li>150元/次</li>
-							</ul>
-						</div>
-					</div>
-                <img src="img/anjubao/2.jpg" alt="" class="all-img5">
-                <img src="img/anjubao/3.jpg" alt="" class="all-img5">
-                <img src="img/anjubao/4.jpg" alt="" class="all-img5">
-                <img src="img/anjubao/5.jpg" alt="" class="all-img5">
-                <img src="img/anjubao/6.jpg" alt="" class="all-img5">
-                <img src="img/anjubao/7.jpg" alt="" class="all-img5">
-                <img src="img/anjubao/8.jpg" alt="" class="all-img5">
+<div data-page="order-anjubao-intro" class="page">
+
+    <div id="indexPageContentDiv" class="page-content">
+
+        <div class="beijing-index">
+            <img src="img/anjubao/1.png" alt="" class="all-img">
+            <div class="shendu-bx">
+                <a href="order/order-deep-choose.html?service_type_id=65">
+                    <div class="all-button">立即预约</div>
+                </a>
+                <div class="shendu-bx-xd">
+                    <ul class="shendu-bx-xd1">
+                        <li>类别</li>
+                        <li>非会员价</li>
+                        <li>会员价</li>
+                    </ul>
+
+                    <ul class="shendu-bx-xd11">
+                        <li>设计方案</li>
+                        <li>299元/次</li>
+                        <li>220元/次</li>
+                    </ul>
+                    <ul class="shendu-bx-xd11">
+                        <li>施工费</li>
+                        <li>199元/次</li>
+                        <li>150元/次</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="shendu-bx">
+                <div class="shendu-title" style="clear:both;margin-top:10px;">
+                    <div class="shendu-title-1"></div>
+                    <p>服务介绍</p>
+                </div>
+                <p class="special-color1">叮当到家“安居宝”服务，把意外伤害降到最低，让孩子远离“磕磕碰碰”。</p>
+            </div>
+            <div class="shendu-bx">
+                <div class="shendu-title" style="clear:both;margin-top:10px;">
+                    <div class="shendu-title-1"></div>
+                    <p>服务特色</p>
+                </div>
+                <p class="special-color1">
+                    1.针对家居环境中四大块最容易对宝宝造成意外伤害的部分，我们采取更细致化的解决方案，根据每个家庭不同的情况，各个宝宝不同的性格和喜好，为家庭定制化服务。“安居宝”儿童安全防护解决方案</p>
+                <img src="img/anjubao/2.png" alt="" class="all-img4">
+                <img src="img/anjubao/3.png" alt="" class="all-img4">
+                <img src="img/anjubao/4.png" alt="" class="all-img4">
+                <img src="img/anjubao/5.png" alt="" class="all-img4">
+                <div class="chongzhi5-kong2"></div>
+            </div>
+            <div class="shendu-bx">
+                <div class="shendu-title" style="clear:both;margin-top:10px;">
+                    <div class="shendu-title-1"></div>
+                    <p>服务流程</p>
+                </div>
+                <p class="special-color1">①工作人员上门，根据各个家庭内部情况，制定个性化安全防护方案</p>
+                <p class="special-color1">②三天内提交方案及报价</p>
+                <p class="special-color1">③客户进行方案挑选</p>
+                <p class="special-color1">④一天内安装实施，进行安全防护改进</p>
+                <img src="img/anjubao/6.png" alt="" class="all-img">
             </div>
         </div>
+
+
     </div>
 </div>
