--- a/jhj-web-user/order/order-baby-intro.html
+++ b/jhj-web-user/order/order-baby-intro.html
@@ -1,299 +1,119 @@
-<div class="pages navbar-through toolbar-through">
-    <div data-page="order-baby-intro" class="page">
-        <div id="indexPageContentDiv" class="page-content">
-            <div class="beijing-index">
-                <div class="main">
-                    <img src="img/yunfu/1.png" alt="" style="width:100%;">
-                    <div class="main-yunfu-mukuai">
-                        <div class="main-yunfu-mukuai1">
-                            <img src="img/yunfu/2.png" alt="">
-                            <!-- <a href="order/order-deep-choose.html?service_type_id=63"><div class="all-button">立即预约</div></a> -->
-                            <div class="shendu-bx">
-								<a href="order/order-deep-choose.html?service_type_id=63"><div class="all-button">立即预约</div>
-								<div class="shendu-bx-xd">
-									<ul class="shendu-bx-xd1">
-										<li>类别</li>
-										<li>非会员价</li>
-										<li>会员价</li>
-									</ul>
-									<ul class="shendu-bx-xd11">
-										<li>孕家洁</li>
-										<li>699元/次</li>
-										<li>649元/次</li>
-									</ul>
-								</div>
-							</div>
-                            <ul class="main-yunfu-mukuai11">
-                                <li><img src="img/yunfu/3.png" alt=""></li>
-                                <li>
-                                    <p style="margin-top:30px;">【叮当到家】用专业贴心服务，呵护孕妇健康</p>
-                                    <p style="margin-top:30px;">孕妇在怀孕期间，</p>
-                                    <p>对室内环境的整洁度、清洁度、空气质量有着较高要求，</p>
-                                    <p>好的居住环境直接决定了孕妇的心情和胎儿的健康。</p>
-                                </li>
-                            </ul>
-                            <ul class="main-yunfu-mukuai12">
-                                <li style="float:left;">
-                                    <p>【叮当到家】采用食材水果萃取工艺开发专用清洁剂，纯天然无污染，细微之处只为您和您家宝宝的健康</p>
-                                </li>
-                                <li style="float:right;">
-                                    <img src="img/yunfu/4.png" alt="" style="margin-top: 60px;">
-                                </li>
-                                <li>
-                                    <img src="img/yunfu/5.png" alt="">
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
+<div data-page="order-baby-intro" class="page">
 
-                    <div class="main-yunfu-mukuai">
-                        <h5>【叮当到家】孕妇专用家政保洁，为孕期家庭量身定制家政保洁方案</h5>
-                        <ul class="main-yunfu-mukuai21">
-                            <p style="padding-top:30px;">专用清洁剂</p>
-                            <p>天然一一我们身边的食品级清洁剂。</p>
-                            <li style="margin-top:5px;">传统保洁：普通的清洁剂大多以石油化工产品为原料，</li>
-                            <li>还加有各种添加剂，比如强酸、助溶剂、稳定剂、增白剂等。</li>
-                            <li>使用过程中的残留物和挥发的气味对特殊敏感人群（如孕妇、婴幼儿等）的皮肤和呼吸道会产生一定的刺激，甚至会引起过敏。</li>
+    <div id="indexPageContentDiv" class="page-content">
 
-                        </ul>
-                        <ul class="main-yunfu-mukuai22">
-                            <p>孕妇专用：我们使用一些我们身边的天然清洁剂（水果原料、天然植物、海盐等），成分天然，不含化学毒害，不含任何铅汞等化学成分，温和无刺激。</p>
-                            <img src="img/yunfu/7.jpg" alt="" style="margin-top:15px;">
-                        </ul>
-                        <ul class="main-yunfu-mukuai23">
-                            <p style="padding-top:60px;">专用工具消毒杀菌</p>
-                            <p>专属一一专用工具为您定制，工具用品全部事前消毒</p>
-                            <li style="margin-top:40px;">传统保洁：工具交叉使用，多次使用旧抹布，如消毒不彻底，会有病毒细菌残留。</li>
-                        </ul>
-                        <ul class="main-yunfu-mukuai22">
-                            <p>孕妇专用：工具用品事前消毒，全新抹布，现场拆封后再用天然手工皂清洗，做到为用户专属定制。</p>
-                            <img src="img/yunfu/9.jpg" alt="" style="margin-top:15px;">
-                        </ul>
-                        <ul class="main-yunfu-mukuai24">
-                            <p style="padding-top:60px;">深度清洁</p>
-                            <p>无死角一一360°全方位除尘清洁</p>
-                            <li style="margin-top:40px;">传统保洁：只针对表面区域的清理打扫，床位、沙发、家具等死角区域隐藏很多灰尘细菌。</li>
-                        </ul>
-                        <ul class="main-yunfu-mukuai22">
-                            <p>孕妇专用：专注死角清洁，如房顶天花板除尘；床位、沙发、柜子等家具底下除尘清洁；厨柜内部清洁；地漏、排水口深度清理等，每月一次。</p>
-                            <img src="img/yunfu/11.jpg" alt="" style="margin-top:15px;">
-                        </ul>
-
-                        <ul class="main-yunfu-mukuai25">
-                            <p style="padding-top:15px;">厨、卫高温消毒杀菌</p>
-                            <p>高温一一物理消毒杀菌法，全程保障零污染</p>
-                            <li style="margin-top:40px;">
-                                传统消毒：经常使用消毒液、洁厕灵、清洁剂混用，这样易造成氯中毒，引起呼吸道的严重损伤，对眼睛、黏膜和皮肤有高度刺激性，对女性健康尤其孕妇危害很大。
-                            </li>
-                        </ul>
-                        <ul class="main-yunfu-mukuai22">
-                            <p>孕妇专用：全程使用高温进行消毒杀菌，从而避免二次污染，不仅可杀死一般的细菌，对细菌芽胞也有杀灭效果，是最可靠、应用最普遍的物理灭菌法。</p>
-                            <img src="img/yunfu/13.jpg" alt="" style="margin-top:15px;">
-                        </ul>
-
-                        <ul class="main-yunfu-mukuai26">
-                            <p style="padding-top:40px;">空调滤网、纱窗清洁消毒</p>
-                            <p>手工清洗一一让每个通风环节清新零污染</p>
-                            <li style="margin-top:20px;">
-                                传统清洗：经常使用清洗液、塑壳清洗剂等，虽然清洁起来方便、快速、干净，但化学物品难免残留有害物质，，从而引发呼吸系统疾病，如咳嗽、胸痛等。
-                            </li>
-                        </ul>
-                        <ul class="main-yunfu-mukuai27">
-                            <img src="img/yunfu/15.jpg" alt="">
-                            <p>孕妇专用：全程手工清洗，清洗干净后再用纯天然手工皂清洗消毒。宁愿花2倍时间，坚决不用化学剂品，清除灰尘和病毒，让每个通风环节，清新零污染。</p>
-                        </ul>
-
-
-                        <ul class="main-yunfu-mukuai28">
-                            <p style="padding-top:40px;">床铺、窗帘、沙发除螨杀菌</p>
-                            <p>安心一一拒绝螨虫，坐着、躺着100个放心</p>
-                            <li style="margin-top:40px;">孕妇在怀孕期间，除了适量的运动和就餐外，有一大部分时间需要在沙发和床上静养。</li>
-                            <li>沙发和床铺是螨虫极易滋生的场所，螨虫不及时清除可引起丘疹性荨麻疹，身上也会出现无名的红肿、水疱、剧痒等。</li>
-                            <li>【叮当到家】采用专业级除螨仪器，有效清除床铺沙发中的螨虫和细菌。</li>
-                        </ul>
-                        <ul class="main-yunfu-mukuai29">
-                            <p style="margin-top:15px;">常用物品消毒杀菌</p>
-                            <p>贴心一一拒绝细菌，常用物品一律消毒杀菌</p>
-                            <p>手机、电脑、ipad、遥控器、拖鞋、开关、门把手等家庭常用常接触物品，都是日常细菌聚集的“重灾区”， 孕妇在怀孕期间，尤其注意。</p>
-                            <p>【叮当到家】细微之处百倍用心，对孕妇经常接触物品，进行有效的消毒杀菌。</p>
-                            <img src="img/yunfu/17.png" alt="">
-                        </ul>
-                    </div>
-
-                    <img src="img/yunfu/18.jpg" alt="" style="width:100%;">
-
-                    <div class="main-yunfu-mukuai">
-                        <ul class="main-yunfu-mukuai31">
-                            <li style="width:69%;padding-left:1%;">
-                                <p style="font-weight:bold;">服务标准</p>
-                                <p>严格要求一一采用白手套进行质量检查</p>
-                                <p>传统要求：服务人员准时，干活干净效率高，态度好等</p>
-                                <p>孕妇专用：杜绝迟到早退；进门就出示身份证、健康证、技能证</p>
-                                <p>服务过程：工作装及工具齐全，服务过程中穿着工装、穿鞋套、带口罩</p>
-                                <p>服务结束：常见区域（如桌面、台面等）采用白手套进行质量检查</p>
-                            </li>
-                            <li>
-                                <img src="img/yunfu/19.png" alt="">
-                            </li>
-                        </ul>
-                    </div>
+        <div class="beijing-index">
+            <div style="width:100%;">
+                <img src="img/yunfu/1.png" alt="" class="all-img">
+                <div class="shendu-bx">
+                    <a href="order/order-deep-choose.html?service_type_id=63">
+                        <div class="all-button">立即预约</div>
                     </a>
-
-                    <div class="main-yunfu-mukuai">
-						<ul class="main-yunfu-mukuai32">
-							<p>套餐介绍</p>
-							<li><h5 style="margin-left:20%;">服务项目</h5></li>
-							
-							<li><h5 style="background:#B6A9D4;margin-left:20%;">数量</h5></li>
-						</ul>
-						<ul class="main-yunfu-mukuai33">
-							<li>零污染孕期保洁</li>
-							<li>1次</li>
-						</ul>
-						<div class="main-yunfu-mukuai34"></div>
-						<ul class="main-yunfu-mukuai33">
-							<li>厨房高温消毒杀菌</li>
-							<li>1间</li>
-						</ul>
-						<div class="main-yunfu-mukuai34"></div>
-						<ul class="main-yunfu-mukuai33">
-							<li>卫生间高温消毒除菌</li>
-							<li>1间</li>
-						</ul>
-						<div class="main-yunfu-mukuai34"></div>
-						<ul class="main-yunfu-mukuai33">
-							<li>空调滤网清洗</li>
-							<li>2台</li>
-						</ul>
-						<div class="main-yunfu-mukuai34"></div>
-						<ul class="main-yunfu-mukuai33">
-							<li>纱窗清洗</li>
-							<li>2-3间</li>
-						</ul>
-						<div class="main-yunfu-mukuai34"></div>
-						<ul class="main-yunfu-mukuai33">
-							<li>床铺除螨杀菌</li>
-							<li>最多3张</li>
-						</ul>
-						<div class="main-yunfu-mukuai34"></div>
-						<ul class="main-yunfu-mukuai33">
-							<li>窗帘高温杀菌</li>
-							<li>最多3间</li>
-						</ul>
-						<div class="main-yunfu-mukuai34"></div>
-						<ul class="main-yunfu-mukuai33">
-							<li>沙发除螨杀菌(最多3组)</li>
-							<li>最多3组</li>
-						</ul>
-						<div class="main-yunfu-mukuai34"></div>
-						<ul class="main-yunfu-mukuai33">
-							<li>墙、棚掸尘</li>
-							<li>全屋</li>
-						</ul>
-						<div class="main-yunfu-mukuai34"></div>
-						<ul class="main-yunfu-mukuai33">
-							<li>全方位吸尘(地面地毯门垫、窗槽、窗帘、沙发)</li>
-							<li>全屋</li>
-						</ul>
-						<div class="main-yunfu-mukuai34"></div>
-						<ul class="main-yunfu-mukuai33">
-							<li style="clear:both;">地漏下水口深度清理</li>
-							<li>1次</li>
-						</ul>
-						<div class="main-yunfu-mukuai34"></div>
-						<ul class="main-yunfu-mukuai33">
-							<li>常用常接触物品除菌消毒(手机、电脑、ipad、遥控器、拖鞋、开关、门把手)等</li>
-							<li>1次</li>
-						</ul>
-						<div class="main-yunfu-mukuai34"></div>
-						<ul class="main-yunfu-mukuai33">
-							<li></li>
-							<li style="color:#F2436A;">999元</li>
-						</ul>
-					</div>
-
-                    <div class="main-yunfu-mukuai">
-                        <ul class="main-yunfu-mukuai32">
-                            <p>服务优势</p>
+                    <div class="shendu-bx-xd">
+                        <ul class="shendu-bx-xd1">
+                            <li>类别</li>
+                            <li>非会员价</li>
+                            <li>会员价</li>
                         </ul>
-                        <ul class="main-yunfu-mukuai41">
-                            <li>
-                                <img src="img/yunfu/20.png" alt="">
-                                <p>给力！至少2名家政人员 </p>
-                            </li>
-                            <li>
-                                <img src="img/yunfu/21.jpg" alt="">
-                                <p>够细！至少服务4小时</p>
-                            </li>
+
+                        <ul class="shendu-bx-xd11">
+                            <li>孕家洁</li>
+                            <li>699元/次</li>
+                            <li>649元/次</li>
                         </ul>
                     </div>
-
-                    <div class="main-yunfu-mukuai">
-                        <ul class="main-yunfu-mukuai32">
-                            <p>贴心客服</p>
-                        </ul>
-                        <ul class="main-yunfu-mukuai41">
-                            <li>
-                                <img src="img/yunfu/22.png" alt="" style="margin-top:40px;">
-                            </li>
-                            <li>
-                                <p>010-53511197</p>
-                                <p>我们用心倾听</p>
-                                <p>服务时间：9:30-18:30</p>
-                                <p>关注微信公众号获取更多服务信息</p>
-                                <img src="img/yunfu/26.png" alt="" style="width:40%;margin-left:30%;">
-                            </li>
-                        </ul>
+                </div>
+                <div class="shendu-bx">
+                    <div class="shendu-title" style="clear:both;margin-top:10px;">
+                        <div class="shendu-title-1"></div>
+                        <p>服务介绍</p>
                     </div>
-
-                    <div class="main-yunfu-mukuai">
-                        <ul class="main-yunfu-mukuai32">
-                            <p>消费提醒</p>
-                        </ul>
-                        <img src="img/yunfu/23.png" alt="" style="width:100%;">
+                    <p class="special-color1">叮当到家“孕家洁”服务，孕妇家庭专属定制清洁方案，更专注，所以更安全！</p>
+                </div>
+                <div class="shendu-bx">
+                    <div class="shendu-title" style="clear:both;margin-top:10px;">
+                        <div class="shendu-title-1"></div>
+                        <p>服务优势</p>
                     </div>
-
-                    <div class="main-yunfu-mukuai">
-                        <ul class="main-yunfu-mukuai32">
-                            <p>商家介绍</p>
-                        </ul>
-                        <ul class="main-yunfu-mukuai51">
-                            <li>与普通家政相比，整体上具有明显差异化优势</li>
-                            <li>天 然——我们身边的食品级清洁剂</li>
-                            <li>专 属——专用工具为您定制，工具用品全部事前消毒</li>
-                            <li>无 死 角——360°全方位清洁整理</li>
-                            <li>高 温——物理消毒杀菌法，全程保障零污染</li>
-                            <li>手工清洗——让每个通风环节清新零污染</li>
-                            <li>安 心——拒绝螨虫，坐着、躺着100个放心</li>
-                            <li>贴 心——拒绝细菌，常用物品一律消毒杀菌</li>
-                            <li>严格要求——采用白手套进行质量检查</li>
-                        </ul>
-                        <ul class="main-yunfu-mukuai52">
-                            <li><img src="img/yunfu/24.png" alt=""></li>
-                            <li style="margin-top:30px;">
-                                <p style="margin-top:30px;">叮当到家用专业贴心服务，科学呵护孕妇健康，</p>
-                                <p>为孕期家庭量身定制孕妇专用家政保洁，</p>
-                                <p>对室内环境的整洁度、清洁度、空气质量秉持高标准要求，</p>
-                                <p>为孕妇的心情和胎儿的健康提供双重保护。</p>
-                                <p>公司对服务人员进行持久的服务素质培养，</p>
-                                <p>通过礼仪培训、技能培训等，保障服务人员具有较高的行业服务水准。</p>
-                            </li>
-                        </ul>
+                    <img src="img/yunfu/2.png" alt="" class="all-img6">
+                    <div class="chongzhi5-kong2"></div>
+                </div>
+                <div class="shendu-bx">
+                    <div class="shendu-title" style="clear:both;margin-top:10px;">
+                        <div class="shendu-title-1"></div>
+                        <p>服务特色</p>
                     </div>
+                    <p class="special-color1">专用——食品级清洁剂，成分天然，温和无刺激。家庭专属定制工具，不混用，更洁净</p>
+                    <p class="special-color1">专注——高温物理消毒法，更专注于居室环境除尘，除螨，消毒杀菌</p>
+                    <p class="special-color1">专心——对清洁死角说“NO”，不让“看不见的灰尘”侵害母婴健康</p>
+                    <img src="img/yunfu/3.png" alt="" class="all-img2">
+                    <img src="img/yunfu/4.png" alt="" class="all-img2">
+                    <img src="img/yunfu/5.png" alt="" class="all-img2">
+                    <div class="chongzhi5-kong2"></div>
+                </div>
 
-                    <!-- <a id="9">
-                    </a> -->
-                    <div class="main-yunfu-mukuai" id="9">
-                        <ul class="main-yunfu-mukuai32">
-                            <p>品牌故事</p>
-                        </ul>
-                        <img src="img/yunfu/25.png" alt="" style="width:100%;margin-top:30px;">
+                <div class="shendu-bx">
+                    <div class="shendu-title" style="clear:both;margin-top:10px;">
+                        <div class="shendu-title-1"></div>
+                        <p>服务项目</p>
                     </div>
-
+                    <div class="order-yuezifang">
+                        <ul class="order-yuezifang1">
+                            <li>服务项目</li>
+                            <li>数量</li>
+                        </ul>
+                        <ul class="order-yuezifang2">
+                            <li>零污染孕期保洁</li>
+                            <li>1次</li>
+                        </ul>
+                        <ul class="order-yuezifang3">
+                            <li>厨房高温消毒杀菌</li>
+                            <li> 1间</li>
+                        </ul>
+                        <ul class="order-yuezifang2">
+                            <li>卫生间高温消毒除菌</li>
+                            <li>1间</li>
+                        </ul>
+                        <ul class="order-yuezifang3">
+                            <li>空调滤网清洗</li>
+                            <li>2台</li>
+                        </ul>
+                        <ul class="order-yuezifang2">
+                            <li>纱窗清洗</li>
+                            <li>2-3间</li>
+                        </ul>
+                        <ul class="order-yuezifang3">
+                            <li>床铺除螨杀菌</li>
+                            <li>最多3张</li>
+                        </ul>
+                        <ul class="order-yuezifang2">
+                            <li>窗帘高温杀菌</li>
+                            <li>最多3间</li>
+                        </ul>
+                        <ul class="order-yuezifang3">
+                            <li>沙发除螨杀菌</li>
+                            <li>最多3组</li>
+                        </ul>
+                        <ul class="order-yuezifang2">
+                            <li>墙、棚掸尘</li>
+                            <li>全屋</li>
+                        </ul>
+                        <ul class="order-yuezifang3">
+                            <li>全方位吸尘地面地毯门垫、窗槽、窗帘、沙发</li>
+                            <li style="height:80px;">全屋</li>
+                        </ul>
+                        <ul class="order-yuezifang2">
+                            <li>地漏下水口深度清理</li>
+                            <li>1次</li>
+                        </ul>
+                        <ul class="order-yuezifang3">
+                            <li>除菌消毒手机、电脑、ipad、遥控器、拖鞋、开关</li>
+                            <li style="height:80px;">1次</li>
+                        </ul>
+                        <div class="chongzhi5-kong2"></div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-
