--- a/jhj-web-user/order/order-cleanbaby-intro.html
+++ b/jhj-web-user/order/order-cleanbaby-intro.html
@@ -1,35 +1,113 @@
-<div class="pages navbar-through toolbar-through">
-    <div data-page="order-cleanbaby-intro" class="page">
-        <div id="indexPageContentDiv" class="page-content">
-            <div class="beijing-index">
-                <img src="img/jiebaobao/1.jpg" alt="" class="all-img">
-                 <div class="shendu-bx">
-					<a href="order/order-deep-choose.html?service_type_id=64"><div class="all-button">立即预约</div>
-					<div class="shendu-bx-xd">
-						<ul class="shendu-bx-xd1">
-							<li>类别</li>
-							<li>非会员价</li>
-							<li>会员价</li>
-						</ul>
-						<ul class="shendu-bx-xd11">
-							<li>洁宝宝</li>
-							<li>349元/次</li>
-							<li>299元/次</li>
-						</ul>
-					</div>
-				</div>
-                <img src="img/jiebaobao/2.jpg" alt="" class="all-img5">
-                <img src="img/jiebaobao/3.jpg" alt="" class="all-img5">
-                <img src="img/jiebaobao/4.jpg" alt="" class="all-img5">
-                <img src="img/jiebaobao/5.jpg" alt="" class="all-img5">
-                <img src="img/jiebaobao/6.jpg" alt="" class="all-img5">
-                <img src="img/jiebaobao/7.jpg" alt="" class="all-img5">
-                <img src="img/jiebaobao/8.jpg" alt="" class="all-img5">
-                <img src="img/jiebaobao/9.jpg" alt="" class="all-img5">
-                <img src="img/jiebaobao/10.jpg" alt="" class="all-img5">
+<div data-page="order-cleanbaby-intro" class="page">
+
+    <div id="indexPageContentDiv" class="page-content">
+
+        <div class="beijing-index">
+            <img src="img/jiebaobao/1.png" alt="" class="all-img">
+            <div class="shendu-bx">
+                <a href="order/order-deep-choose.html?service_type_id=64">
+                    <div class="all-button">立即预约</div>
+                </a>
+                <div class="shendu-bx-xd">
+                    <ul class="shendu-bx-xd1">
+                        <li>类别</li>
+                        <li>非会员价</li>
+                        <li>会员价</li>
+                    </ul>
+
+                    <ul class="shendu-bx-xd11">
+                        <li>洁宝宝</li>
+                        <li>349元/次</li>
+                        <li>299元/次</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="shendu-bx">
+                <div class="shendu-title" style="clear:both;margin-top:10px;">
+                    <div class="shendu-title-1"></div>
+                    <p>服务介绍</p>
+                </div>
+                <p class="special-color1">叮当到家“洁宝宝”服务，守护母婴幼儿家庭的“消毒专家”</p>
+            </div>
+            <div class="shendu-bx">
+                <div class="shendu-title" style="clear:both;margin-top:10px;">
+                    <div class="shendu-title-1"></div>
+                    <p>服务特色</p>
+                </div>
+                <p class="special-color1">①“洁宝宝”秘制3种科学消毒除菌配方，用3个瓶子为宝贝打造健康舒适环境。</p>
+                <p class="special-color1">②独创细致化服务内容和消毒法，不放过任何可能危害到母婴幼儿健康的死角。</p>
+                <p class="special-color1">③首次体验“洁宝宝”，免费赠送家居环境检测一次。</p>
+                <img src="img/jiebaobao/2.png" alt="" class="all-img2">
+                <img src="img/jiebaobao/3.png" alt="" class="all-img2">
+                <img src="img/jiebaobao/4.png" alt="" class="all-img2">
+                <div class="chongzhi5-kong2"></div>
+            </div>
+            <div class="shendu-bx">
+                <div class="shendu-title" style="clear:both;margin-top:10px;">
+                    <div class="shendu-title-1"></div>
+                    <p>服务项目</p>
+                </div>
+                <div class="order-jiebaobao">
+                    <ul class="order-jiebaobao1">
+                        <li>服务项目</li>
+                        <li>服务内容</li>
+                        <li>消毒方法</li>
+                    </ul>
+                    <ul class="order-jiebaobao2">
+                        <li>餐具清洁消毒</li>
+                        <li>
+                            <p>婴儿奶瓶奶嘴</p>
+                            <p>母婴常用碗筷</p>
+                            <p>菜板,刀具</p>
+                        </li>
+                        <li>
+                            <p>高压蒸汽消毒</p>
+                            <p>高温蒸汽</p>
+                            <p>环保消毒液喷洒</p>
+                        </li>
+                    </ul>
+                    <ul class="order-jiebaobao3">
+                        <li>用具清洁消毒</li>
+                        <li>
+                            <p>婴儿床,澡盆</p>
+                            <p>便盆,学步车</p>
+                            <p>手机,遥控器 </p>
+                            <p>iPad,拖鞋</p>
+                            <p>开关,门把手等</p>
+                        </li>
+                        <li>
+                            <p>消毒液擦拭</p>
+                            <p>高温蒸汽</p>
+                            <p>喷洒消毒液</p>
+                            <p>消毒液擦拭</p>
+                            <p>局部去污</p>
+                            <p>喷洒消毒液</p>
+                        </li>
+                    </ul>
+                    <ul class="order-jiebaobao4">
+                        <li>玩具清洁消毒</li>
+                        <li>
+                            <p>塑料玩具</p>
+                            <p>布料玩具</p>
+                            <p>毛绒玩具</p>
+                            <p>木质玩具</p>
+                            <p>高档电动玩具等</p>
+                        </li>
+                        <li>
+                            <p>消毒液浸泡</p>
+                            <p>喷洒消毒液</p>
+                            <p>环保消毒液</p>
+                            <p>消毒液擦拭</p>
+                            <p>高温蒸汽</p>
+                            <p>喷洒消毒液</p>
+                            <p>消毒液浸泡</p>
+                            <p>喷洒消毒液</p>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
+
+
     </div>
 </div>
-
-
