--- a/jhj-web-user/active/twoyears-active-index.html
+++ b/jhj-web-user/active/twoyears-active-index.html
@@ -3,7 +3,7 @@
         <div class="beijing-index">
             <a href="javascript:;"><img src="img/qingrenjie/2017-01-24-1.jpg" alt="" class="all-img" style="margin-top:-1px;"></a>
             <a href="user/charge/mine-charge-list.html"><img src="img/qingrenjie/2017-01-24-2.jpg" alt="" class="all-img" style="margin-top:-6px;"></a>
-            <a href=""><img src="img/qingrenjie/2017-01-24-3.jpg" alt="" class="all-img" style="margin-top:-6px;"></a>
+            <a href="/u"><img src="img/qingrenjie/2017-01-24-3.jpg" alt="" class="all-img" style="margin-top:-6px;"></a>
             <a href="active/twoyears-active-oneHot.html"><img src="img/qingrenjie/2017-01-24-4.jpg" alt="" class="all-img" style="margin-top:-6px;"></a>
            <!--  <a href="active/twoyears-active-hood.html"><img src="img/qingrenjie/2017-01-24-5.jpg" alt="" class="all-img" style="margin-top:-6px;"></a> -->
             <a href="javascript:;"><img src="img/qingrenjie/2017-01-24-5.jpg" alt="" class="all-img" style="margin-top:-6px;"></a>
