--- a/jhj-web-user/order/order-old-index.html
+++ b/jhj-web-user/order/order-old-index.html
@@ -49,7 +49,7 @@
                         <p>安居宝</p>
                     </a>
                 </div>
-                
+               <!--  
                 <div class="shendu-circle">
 					<a href="order/order-old-yuesao.html">
 						<img src="img/wengjiajie/8.png" alt="">
@@ -61,7 +61,7 @@
 						<img src="img/wengjiajie/9.png" alt="">
 						<p>育儿嫂</p>
 					</a>
-				</div>
+				</div> -->
             </div>
         </div>
     </div>
