--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -2,48 +2,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>引领高品质家庭生活方式，家政服务专属定制——叮当到家</title>
-	<link rel="stylesheet" href="css/index.css">
-	<script src="js/function.js"></script>
-	<script src="js/animate.js"></script>
-	<script src="js/jquery.js"></script>
-	<script src="js/index.js"></script>
-	<meta name="description" content="叮当到家是专注于家庭保洁，家政服务，生活服务，深度养护，烧饭做饭的专属性平台，让你美好+0的生活不再有家务之忧">
-	<meta name="keywords" content="家政服务，家政保洁，北京家政，北京家政服务，生活服务，做菜烧饭，家庭保洁，深度养护，家政，保洁">
-	 <link rel="icon" href="favicon.ico" sizes="16x16 32x32"> 
-	 <meta name="baidu-site-verification" content="TfPmUnCn17" />
-	 <script type="text/javascript">
- var commonURL = 'http://www.jia-he-jia.com';
- function mobile_device_detect(url){
-  var thisOS=navigator.platform;
-  var os=new Array("iPhone","iPod","iPad","android","Nokia","SymbianOS","Symbian","Windows Phone","Phone","Linux armv71","MAUI","UNTRUSTED/1.0","Windows CE","BlackBerry","IEMobile");
-  for(var i=0;i<os.length;i++){
-    if(thisOS.match(os[i])){   
-         window.location=url;
-         }
-  }
-  if(navigator.platform.indexOf('iPad') != -1){
-      window.location=url;
-  }
-  var check = navigator.appVersion;
-      if( check.match(/linux/i) ){
-          if(check.match(/mobile/i) || check.match(/X11/i)) {
-         window.location=url;
-        }  
-      }
-  Array.prototype.in_array = function(e){
-    for(i=0;i<this.length;i++){
-      if(this[i] == e)
-      return true;
-      }
-      return false;
-    }
-  } 
-mobile_device_detect("http://www.jia-he-jia.com/u/");/*指定跳转地址*/
- </script>
+<meta charset="UTF-8">
+<title>引领高品质家庭生活方式，家政服务专属定制——叮当到家</title>
+<link rel="stylesheet" href="css/index.css">
+<script src="js/function.js"></script>
+<script src="js/animate.js"></script>
+<script src="js/jquery.js"></script>
+<script src="js/index.js"></script>
+<meta name="description" content="叮当到家是专注于家庭保洁，家政服务，生活服务，深度养护，烧饭做饭的专属性平台，让你美好+0的生活不再有家务之忧">
+<meta name="keywords" content="家政服务，家政保洁，北京家政，北京家政服务，生活服务，做菜烧饭，家庭保洁，深度养护，家政，保洁">
+<link rel="icon" href="favicon.ico" sizes="16x16 32x32">
+<meta name="baidu-site-verification" content="TfPmUnCn17" />
+<script type="text/javascript">
+	var commonURL = 'http://www.jia-he-jia.com';
+	function mobile_device_detect(url) {
+		var thisOS = navigator.platform;
+		var os = new Array("iPhone", "iPod", "iPad", "android", "Nokia", "SymbianOS", "Symbian",
+				"Windows Phone", "Phone", "Linux armv71", "MAUI", "UNTRUSTED/1.0", "Windows CE",
+				"BlackBerry", "IEMobile");
+		for (var i = 0; i < os.length; i++) {
+			if (thisOS.match(os[i])) {
+				window.location = url;
+			}
+		}
+		if (navigator.platform.indexOf('iPad') != -1) {
+			window.location = url;
+		}
+		var check = navigator.appVersion;
+		if (check.match(/linux/i)) {
+			if (check.match(/mobile/i) || check.match(/X11/i)) {
+				window.location = url;
+			}
+		}
+		Array.prototype.in_array = function(e) {
+			for (i = 0; i < this.length; i++) {
+				if (this[i] == e) return true;
+			}
+			return false;
+		}
+	}
+	mobile_device_detect("http://www.jia-he-jia.com/u/");/*指定跳转地址*/
+</script>
 </head>
-<body style="overflow:hidden;">
+<body style="overflow: hidden;">
 	<div class="index-shouye">
 		<div class="index-shouye1">
 			<img src="img/logo.png" alt="">
@@ -52,15 +53,21 @@ mobile_device_detect("http://www.jia-he-jia.com/u/");/*指定跳转地址*/
 			<p>预约服务</p>
 			<img src="img/shouzhi1.png" alt="">
 		</div>
-		<div class="index-shouye3" >
+		<div class="index-shouye3">
 			<div class="index-shouye3-1">
-				<iframe src="../u"  frameborder='no' width="332px" height="466px" scrolling="no" seamless></iframe>
+				<iframe src="../u" frameborder='no' width="332px" height="466px" scrolling="no" seamless></iframe>
 			</div>
 		</div>
 		<ul class="index-shouye4">
-			<a href="index.html"><li class="special-color3">首页</li></a>
-			<a href="personal.html"><li>家务包年</li></a>
-			<a href="hangyezixun.html"><li>品质生活专区</li></a>
+			<a href="index.html">
+				<li class="special-color3">首页</li>
+			</a>
+			<a href="personal.html">
+				<li>家务包年</li>
+			</a>
+			<a href="hangyezixun.html">
+				<li>品质生活专区</li>
+			</a>
 		</ul>
 		<div class="index-shouye5">
 			<img src="img/erweima2.png" alt="">
@@ -72,20 +79,40 @@ mobile_device_detect("http://www.jia-he-jia.com/u/");/*指定跳转地址*/
 		</ul>
 		<div class="index-shouye7">
 			<ul class="index-shouye7-1">
-				<a href="shichanghezuo.html" target="blank"><li>市场合作</li></a>
-				<a href="zaixianfankui.html" target="blank"><li>在线反馈</li></a>
-				<a href="changjianwenti.html" target="blank"><li>常见问题</li></a>
-				<a href="jiaruwomen.html" target="blank"><li>加入我们</li></a>
+				<a href="shichanghezuo.html" target="blank">
+					<li>市场合作</li>
+				</a>
+				<a href="zaixianfankui.html" target="blank">
+					<li>在线反馈</li>
+				</a>
+				<a href="changjianwenti.html" target="blank">
+					<li>常见问题</li>
+				</a>
+				<a href="jiaruwomen.html" target="blank">
+					<li>加入我们</li>
+				</a>
 			</ul>
 			<p class="index-shouye7-2">备案号：京ICP15038422号-1</p>
 		</div>
 	</div>
-
-	<script type="text/javascript"> var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://"); document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fa1deaad494a95d532bfed8013cce1c4a' type='text/javascript'%3E%3C/script%3E")) </script>
-
+	<!-- 在线客服代码 -->
+	<script type="text/javascript">
+		var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+		document
+				.write(unescape("%3Cscript src='"
+						+ _bdhmProtocol
+						+ "hm.baidu.com/h.js%3Fa1deaad494a95d532bfed8013cce1c4a' type='text/javascript'%3E%3C/script%3E"))
+	</script>
+	
+	<!-- 百度统计 -->
+	<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?2770fd9c2a7009f34e660180cb87d1eb";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 </body>
 </html>
-
-
-
-
