--- a/jhj-web-user/order/order-list.html
+++ b/jhj-web-user/order/order-list.html
@@ -1,6 +1,6 @@
 
 <div class="pages navbar-through toolbar-through">
-	<div data-page="order-list" class="page">
+	<div data-page="order-list" class="page" style="overflow:auto;">
 		<div id="indexPageContentDiv" class="page-content">
 			<div class="beijing-index" id="order-list-div">
 				
