-- 微网站增加百度统计

--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -298,5 +298,14 @@
 	<!-- 周年庆活动领取优惠券 -->
 	<script type="text/javascript" src="js/active/twoyears-active-coupons.js"></script>
 	
+	<script>
+		var _hmt = _hmt || [];
+		(function() {
+		  var hm = document.createElement("script");
+		  hm.src = "https://hm.baidu.com/hm.js?0b9e63651dea02c0aab1ea970f63dfae";
+		  var s = document.getElementsByTagName("script")[0]; 
+		  s.parentNode.insertBefore(hm, s);
+		})();
+	</script>
 </body>
 </html>
