--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -229,5 +229,14 @@
 	<script type="text/javascript" src="js/u-lib.min.js"></script>
 	<script type="text/javascript" src="js/u-main.min.js?t=806dffa2"></script>
 	<script type="text/javascript" src="js/u.min.js?t=77c14157"></script>
+	<script>
+		var _hmt = _hmt || [];
+		(function() {
+		  var hm = document.createElement("script");
+		  hm.src = "https://hm.baidu.com/hm.js?0b9e63651dea02c0aab1ea970f63dfae";
+		  var s = document.getElementsByTagName("script")[0]; 
+		  s.parentNode.insertBefore(hm, s);
+		})();
+	</script>
 </body>
 </html>
