--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -22,6 +22,20 @@
 				<div data-page="index" class="page">
 					<div id="indexPageContentDiv" class="page-content">
 						<a href="active/twoyears-active-index.html"><img src="img/indexthree/banner1.jpg" alt="" style="width: 100%; padding: 0;"></a>
+						
+						<!-- 轮播图 -->
+						<div class="swiper-container swiper-1">
+						    <div class="swiper-pagination"></div>
+						    <div class="swiper-wrapper">
+						      <div class="swiper-slide">
+						      	<a href="active/twoyears-active-index.html"><img src="img/indexthree/banner1.jpg" alt="" style="width: 100%; padding: 0;"></a>
+						      </div>
+						      <div class="swiper-slide">
+						      	<a href="order/order-hour-index.html"><img src="img/indexthree/banner2.jpg" alt="" style="width: 100%; padding: 0;"></a>
+						      </div>
+						    </div>
+						  </div>
+						
 						<div class="beijing-index">
 							<div class="index-title">
 								<div class="index-title-1"></div>
