--- a/jhj-web-user/order/order-anjubao-intro.html
+++ b/jhj-web-user/order/order-anjubao-intro.html
@@ -3,7 +3,7 @@
     <div id="indexPageContentDiv" class="page-content">
 
         <div class="beijing-index">
-            <img src="img/anjubao/1.png" alt="" class="all-img">
+            <img src="img/anjubao/old-1.png" alt="" class="all-img">
             <div class="shendu-bx">
                 <a href="order/order-deep-choose.html?service_type_id=65">
                     <div class="all-button">立即预约</div>
@@ -41,10 +41,10 @@
                 </div>
                 <p class="special-color1">
                     1.针对家居环境中四大块最容易对宝宝造成意外伤害的部分，我们采取更细致化的解决方案，根据每个家庭不同的情况，各个宝宝不同的性格和喜好，为家庭定制化服务。“安居宝”儿童安全防护解决方案</p>
-                <img src="img/anjubao/2.png" alt="" class="all-img4">
-                <img src="img/anjubao/3.png" alt="" class="all-img4">
-                <img src="img/anjubao/4.png" alt="" class="all-img4">
-                <img src="img/anjubao/5.png" alt="" class="all-img4">
+                <img src="img/anjubao/old-2.png" alt="" class="all-img4">
+                <img src="img/anjubao/old-3.png" alt="" class="all-img4">
+                <img src="img/anjubao/old-4.png" alt="" class="all-img4">
+                <img src="img/anjubao/old-5.png" alt="" class="all-img4">
                 <div class="chongzhi5-kong2"></div>
             </div>
             <div class="shendu-bx">
