--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -23,12 +23,9 @@
 		<div class="view view-main">
 			<div class="pages navbar-through toolbar-through">
 				<div data-page="index" class="page">
-					<div id="indexPageContentDiv" class="page-content">
-						
-						
+					<div id="indexPageContentDiv" class="page-content" >
 						<!-- 轮播图 -->
-						<!-- <div class="content-block-title">1 Slide Per View, 50px Between</div> -->
-						  <div class="swiper-container swiper-1">
+						  <div class="swiper-container swiper-init swiper-1" data-pagination=".swiper-pagination">
 						    <div class="swiper-pagination"></div>
 						    <div class="swiper-wrapper">
 						      <div class="swiper-slide">
