--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -21,10 +21,8 @@
 			<div class="pages navbar-through toolbar-through">
 				<div data-page="index" class="page">
 					<div id="indexPageContentDiv" class="page-content">
-						<a href="active/twoyears-active-index.html"><img src="img/indexthree/banner1.jpg" alt="" style="width: 100%; padding: 0;"></a>
-						
 						<!-- 轮播图 -->
-						<div class="swiper-container swiper-1">
+						  <div class="swiper-container swiper-init swiper-1" data-pagination=".swiper-pagination">
 						    <div class="swiper-pagination"></div>
 						    <div class="swiper-wrapper">
 						      <div class="swiper-slide">
