--- a/ROOT/property/index.html
+++ b/ROOT/property/index.html
@@ -7,16 +7,16 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<title>物业</title>
-	<link rel="stylesheet" href="css/css.css">
+	<link rel="stylesheet" href="../css/active/css.css">
 </head>
 <body>
-	<img src="img/top.png" alt="五重豪礼送不停" style="width:100%;">
+	<img src="../img/active/top.png" alt="五重豪礼送不停" style="width:100%;">
 	<div class="property">
-		<img src="img/1.png" alt="第一重豪礼" class="all-img">
-		<img src="img/2.png" alt="第二重豪礼" class="all-img">
-		<img src="img/3.png" alt="第三重豪礼" class="all-img">
-		<img src="img/4.png" alt="第四重豪礼" class="all-img">
-		<img src="img/5.png" alt="第五重豪礼" class="all-img">
+		<img src="../img/active/1.png" alt="第一重豪礼" class="all-img">
+		<img src="../img/active/2.png" alt="第二重豪礼" class="all-img">
+		<img src="../img/active/3.png" alt="第三重豪礼" class="all-img">
+		<img src="../img/active/4.png" alt="第四重豪礼" class="all-img">
+		<img src="../img/active/5.png" alt="第五重豪礼" class="all-img">
 		<div class="property-1">
 			<div class="property-1-1">
 				输入手机号&nbsp;&nbsp;<input type="tel" value="" placeholder="请输入手机号">
@@ -26,7 +26,7 @@
 				<img src="img/finger.png" alt="点我领取" style="height:40px;margin-left:10px;">
 			</div></a>
 		</div>
-		<img src="img/bottom.png" alt="" class="all-img">
+		<img src="../img/active/bottom.png" alt="" class="all-img">
 	</div>
 </body>
 </html>
