--- a/jhj-web-user/order/hourIntro/order-hour-intro-68.html
+++ b/jhj-web-user/order/hourIntro/order-hour-intro-68.html
@@ -5,7 +5,7 @@
 		<p>服务介绍</p>
 	</div>
 	<p class="special-color1">温馨提示：</p>
-	<p class="special-color1">1.基础保洁3个小时起步，如服务超时将按照非会员50元/小时，会员45/小时收费</p>
+	<p class="special-color1">1.基础保洁3个小时起步，如服务超时将按照非会员40元/小时，会员36元/小时收费</p>
 	<p class="special-color1">2.服务员自带消过毒的5色抹布、清洁剂和清洁工具</p>
 	<p class="special-color1">3.高温消毒后台盆、墙面会有部分水珠残留，属正常现象</p>
 </div>
