--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -29,10 +29,10 @@
 						    <div class="swiper-pagination"></div>
 						    <div class="swiper-wrapper">
 						      <div class="swiper-slide">
-						      	<a href="active/twoyears-active-index.html"><img src="img/indexthree/banner1.jpg" alt="" style="width: 100%; padding: 0;"></a>
+						      	<a href="order/order-hour-index.html"><img src="img/indexthree/banner2.jpg" alt="" style="width: 100%; padding: 0;"></a>
 						      </div>
 						      <div class="swiper-slide">
-						      	<a href="order/order-hour-index.html"><img src="img/indexthree/banner2.jpg" alt="" style="width: 100%; padding: 0;"></a>
+						      	<a href="active/twoyears-active-index.html"><img src="img/indexthree/banner1.jpg" alt="" style="width: 100%; padding: 0;"></a>
 						      </div>
 						    </div>
 						  </div>
@@ -46,8 +46,7 @@
 								<div class="mincircle mincircle1">
 									<div class="mincircle-one">
 										<p>家庭保洁</p>
-										<p>原价149元</p>
-										<p>会员135起</p>
+										<p>基础保洁大促99元</p>
 									</div>
 									<div class="mincircle-two">
 										<img src="img/indexthree/index-1.png" alt="">
