--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -186,8 +186,8 @@
 								<div class="mincircle mincircle7">
 									<div class="mincircle-one">
 										<p>洁宝宝</p>
-										<p style="color: #999;">0-3岁宝宝家庭</p>
-										<p style="color: #999;">母婴房清洁消毒</p>
+										<p style="color: #999;">0-3岁宝宝餐具</p>
+										<p style="color: #999;">用具玩具消毒</p>
 									</div>
 									<div class="mincircle-two">
 										<img src="img/indexthree/index-7.png" alt="">
